<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home_main">

    <fragment
        android:id="@+id/nav_home_main"
        android:name="com.politecnico.athleticapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_main_to_nav_meal_plans"
            app:destination="@id/nav_meal_plans"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_home_main_to_weeklyChallengeFragment"
            app:destination="@id/weeklyChallengeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_home_main_to_nav_progress_tracking"
            app:destination="@id/nav_progress_tracking" />
        <action
            android:id="@+id/action_nav_home_main_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_main_to_communityChatFragment"
            app:destination="@id/communityChatFragment" />
        <action
            android:id="@+id/action_nav_home_main_to_nav_workouts"
            app:destination="@id/nav_workouts" />
    </fragment>

    <fragment
        android:id="@+id/communityChatFragment"
        android:name="com.politecnico.athleticapp.ui.community.CommunityChatFragment"
        android:label="Community"
        tools:layout="@layout/fragment_community_chat" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.politecnico.athleticapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.politecnico.athleticapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_workouts"
        android:name="com.politecnico.athleticapp.ui.workouts.WorkoutsFragment"
        android:label="@string/menu_workouts"
        tools:layout="@layout/fragment_workouts" />

    <fragment
        android:id="@+id/nav_meal_plans"
        android:name="com.politecnico.athleticapp.ui.mealplans.MealPlansFragment"
        android:label="@string/menu_meal_plans"
        tools:layout="@layout/fragment_meal_plans">
        <action
            android:id="@+id/action_nav_meal_plans_to_nutritionStatsFragment"
            app:destination="@id/nutritionStatsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nutritionStatsFragment"
        android:name="com.politecnico.athleticapp.ui.mealplans.NutritionStatsFragment"
        android:label="Nutrition Stats"
        tools:layout="@layout/fragment_nutrition_stats" />

    <fragment
        android:id="@+id/nav_progress_tracking"
        android:name="com.politecnico.athleticapp.ui.progresstracking.ProgressTrackingFragment"
        android:label="@string/menu_progress_tracking"
        tools:layout="@layout/fragment_progress_tracking">
        <action
            android:id="@+id/action_nav_progress_tracking_to_nav_progress_detail"
            app:destination="@id/nav_progress_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_progress_detail"
        android:name="com.politecnico.athleticapp.ui.progresstracking.ProgressDetailFragment"
        android:label="Detalles de Progreso"
        tools:layout="@layout/fragment_progress_tracking_graphics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.politecnico.athleticapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_breakfast_detail"
        android:name="com.politecnico.athleticapp.ui.mealplans.BreakfastDetailFragment"
        android:label="Breakfast Detail"
        tools:layout="@layout/fragment_breakfast_detail" />

    <fragment
        android:id="@+id/weeklyChallengeFragment"
        android:name="com.politecnico.athleticapp.ui.weeklychallenge.WeeklyChallengeFragment"
        android:label="Weekly Challenge"
        tools:layout="@layout/fragment_weekly_challenge" >
        <action
            android:id="@+id/action_weeklyChallengeFragment_to_routineExercisesFragment"
            app:destination="@id/routineExercisesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/routineExercisesFragment"
        android:name="com.politecnico.athleticapp.ui.weeklychallenge.RoutineExercisesFragment"
        android:label="Routine Exercises"
        tools:layout="@layout/fragment_routine_exercises">
        <argument
            android:name="routineName"
            app:argType="string" />
        <argument
            android:name="routineDay"
            app:argType="string" />
        <argument
            android:name="routineSubtitle"
            app:argType="string" />
        <action
            android:id="@+id/action_routineExercisesFragment_to_exerciseDetailFragment"
            app:destination="@id/exerciseDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/exerciseDetailFragment"
        android:name="com.politecnico.athleticapp.ui.weeklychallenge.ExerciseDetailFragment"
        android:label="Exercise Detail"
        tools:layout="@layout/fragment_exercise_detail">
        <argument
            android:name="exerciseName"
            app:argType="string" />
    </fragment>

</navigation>
